--- a/week9-10/02_quest/03_CRUD/todo-app/app/views/todos/edit.html.erb
+++ b/week9-10/02_quest/03_CRUD/todo-app/app/views/todos/edit.html.erb
@@ -1,2 +1,8 @@
-<h1>Todos#edit</h1>
-<p>Find me in app/views/todos/edit.html.erb</p>
+<div class="container">
+  <h1>タスクの編集</h1>
+
+  <form>
+    <input type="text" placeholder="タスクを入力する">
+    <input type="submit" value="保存する">
+  </form>
+</div>
