Add week9-10 03_CRUD STEP9-2

--- a/week9-10/02_quest/03_CRUD/todo-app/app/views/todos/edit.html.erb
+++ b/week9-10/02_quest/03_CRUD/todo-app/app/views/todos/edit.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
   <h1>タスクの編集</h1>
 
-  <form>
-    <input type="text" placeholder="タスクを入力する">
-    <input type="submit" value="保存する">
-  </form>
+  <%= form_with model: @todo do |f| %>
+    <%= f.text_field :title, placeholder: "タスクを入力する" %>
+    <%= f.submit value: "保存する" %>
+  <% end %>
 </div>
