--- a/week9-10/02_quest/03_CRUD/todo-app/app/views/todos/index.html.erb
+++ b/week9-10/02_quest/03_CRUD/todo-app/app/views/todos/index.html.erb
@@ -16,7 +16,7 @@
         <tr>
           <td><%= todo.title %></td>
           <td>
-            <a class="edit" href="#">編集</a>
+            <a class="edit" href="/todos/<%= todo.id %>/edit">編集</a>
             <a class="delete" href="#">削除</a>
           </td>
         </tr>
