Add week9-10 03_CRUD STEP9-3

--- a/week9-10/02_quest/03_CRUD/todo-app/app/views/todos/edit.html.erb
+++ b/week9-10/02_quest/03_CRUD/todo-app/app/views/todos/edit.html.erb
@@ -1,8 +1,4 @@
 <div class="container">
   <h1>タスクの編集</h1>
-
-  <%= form_with model: @todo do |f| %>
-    <%= f.text_field :title, placeholder: "タスクを入力する" %>
-    <%= f.submit value: "保存する" %>
-  <% end %>
+  <%= render "form", todo: @todo %>
 </div>
