Add week9-10 03_CRUD STEP10

--- a/week9-10/02_quest/03_CRUD/todo-app/app/views/todos/index.html.erb
+++ b/week9-10/02_quest/03_CRUD/todo-app/app/views/todos/index.html.erb
@@ -16,8 +16,8 @@
         <tr>
           <td><%= todo.title %></td>
           <td>
-            <a class="edit" href="/todos/<%= todo.id %>/edit">編集</a>
-            <a class="delete" href="#">削除</a>
+            <%= link_to "編集", edit_todo_path(todo.id), class: "edit" %>
+            <%= link_to "削除", todo_path(todo.id), class: "delete", data: {turbo_method: :delete, turbo_confirm: "本当に削除していいですか?"} %>
           </td>
         </tr>
       <% end %>
