--- a/week9-10/02_quest/03_CRUD/todo-app/app/assets/stylesheets/style.css
+++ b/week9-10/02_quest/03_CRUD/todo-app/app/assets/stylesheets/style.css
@@ -86,3 +86,15 @@ td {
 .field_with_errors {
   display: contents;
 }
+
+.errors {
+  width: 500px;
+  border: 2px solid red;
+  margin-bottom: 20px;
+  text-align: left;
+  font-weight: bold;
+  padding: 5px 5px 5px 15px;
+  font-size: 12px;
+  background-color: #c00;
+  color: #fff;
+}
