--- a/week9-10/02_quest/03_CRUD/todo-app/app/views/todos/_errors.html.erb
+++ b/week9-10/02_quest/03_CRUD/todo-app/app/views/todos/_errors.html.erb
@@ -1,3 +1,3 @@
-<% if @todo.errors.full_messages.include?("Title can't be blank") %>
-  <p>タスクのタイトルを入力してください</p>
+<% if todo.errors.full_messages.include?("Title can't be blank") %>
+  <p class="errors">タスクのタイトルを入力してください</p>
 <% end %>
